Add iOS platform with MetalANGLE backend and RoboVM 2.3.24
Set up the iOS module using gdx-backend-robovm-metalangle (Metal instead of
deprecated OpenGL ES) and MobiVM 2.3.24. Fix RoboVM runtime compatibility
issues: replace java.nio.file.Paths, List.of(), Map.getOrDefault() with
alternatives supported by RoboVM's limited JDK. Disable analytics on iOS
due to missing HTTPS handler. Add iOS setup guide and document RoboVM API
constraints in CLAUDE.md.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>